config scrapy.cfg

--- a/scrapy.cfg
+++ b/scrapy.cfg
@@ -6,6 +6,14 @@
 [settings]
 default = locolcrawler.settings
 
-[deploy]
-#url = http://localhost:6800/
+[deploy:localhost]
+url = http://localhost:6800/
 project = locolcrawler
+version = GIT
+
+[deploy:locold]
+url = http://104.236.40.66/
+username = root
+password = Matkh@u123
+project = locolcrawler
+version = GIT
