--- a/scrapy.cfg
+++ b/scrapy.cfg
@@ -17,3 +17,10 @@ username = root
 password = Matkh@u123
 project = locolcrawler
 version = GIT
+
+# Project: locolcrawler
+[deploy]
+url = https://dash.scrapinghub.com/api/scrapyd/
+username = 0a331539974c4944830eee480ba821aa
+password =
+project = 13882
